--- a/src/docs/asciidoc/api/concert/concert.adoc
+++ b/src/docs/asciidoc/api/concert/concert.adoc
@@ -1,9 +1,32 @@
+[[create-concert]]
+=== 콘서트 생성
+
+==== HTTP Request
+
+include::{snippets}/create-concert/http-request.adoc[]
+
+==== HTTP Request Body
+
+include::{snippets}/create-concert/request-body.adoc[]
+
+==== HTTP Response Body
+
+include::{snippets}/create-concert/http-response.adoc[]
+
 [[available-dates]]
 === 예약 가능 날짜
 
 ==== HTTP Request
 
 include::{snippets}/available-dates/http-request.adoc[]
+
+==== Path Parameters
+
+include::{snippets}/available-dates/path-parameters.adoc[]
+
+==== HTTP Response Body
+
+include::{snippets}/available-dates/http-response.adoc[]
 
 [[get-remain-seats]]
 === 좌석 조회
@@ -12,9 +35,25 @@ include::{snippets}/available-dates/http-request.adoc[]
 
 include::{snippets}/get-remain-seats/http-request.adoc[]
 
+==== Path Parameters
+
+include::{snippets}/get-remain-seats/path-parameters.adoc[]
+
+==== HTTP Response Body
+
+include::{snippets}/get-remain-seats/http-response.adoc[]
+
 [[do-reserve]]
 === 좌석 예약 요청
 
 ==== HTTP Request
 
-include::{snippets}/do reserve/http-request.adoc[]
+include::{snippets}/reserve/http-request.adoc[]
+
+==== HTTP Request Body
+
+include::{snippets}/reserve/request-body.adoc[]
+
+==== HTTP Response Body
+
+include::{snippets}/reserve/http-response.adoc[]
