--- a/src/docs/asciidoc/api/pay/pay.adoc
+++ b/src/docs/asciidoc/api/pay/pay.adoc
@@ -5,6 +5,15 @@
 
 include::{snippets}/get-pays-balance/http-request.adoc[]
 
+==== Http Response
+
+include::{snippets}/get-pays-balance/http-response.adoc[]
+
+==== Http Response Code
+
+include::{snippets}/get-pays-balance/response-fields.adoc[]
+
+
 [[post-pays-charge]]
 === 잔액 충전
 
@@ -12,9 +21,25 @@ include::{snippets}/get-pays-balance/http-request.adoc[]
 
 include::{snippets}/post-pays-charge/http-request.adoc[]
 
+==== Request Body
+
+include::{snippets}/post-pays-charge/request-body.adoc[]
+
+==== Http Response
+
+include::{snippets}/post-pays-charge/http-response.adoc[]
+
 [[post-pays-payment]]
 === 결제
 
 ==== HTTP Request
 
 include::{snippets}/post-pays-payment/http-request.adoc[]
+
+==== Request Body
+
+include::{snippets}/post-pays-payment/request-body.adoc[]
+
+==== Http Response
+
+include::{snippets}/post-pays-payment/http-response.adoc[]
