--- a/src/docs/asciidoc/api/concert/concert.adoc
+++ b/src/docs/asciidoc/api/concert/concert.adoc
@@ -43,17 +43,17 @@ include::{snippets}/get-remain-seats/path-parameters.adoc[]
 
 include::{snippets}/get-remain-seats/http-response.adoc[]
 
-[[do-reserve]]
+[[get-remain-seats]]
 === 좌석 예약 요청
 
 ==== HTTP Request
 
-include::{snippets}/reserve/http-request.adoc[]
+include::{snippets}/get-remain-seats/http-request.adoc[]
 
 ==== HTTP Request Body
 
-include::{snippets}/reserve/request-body.adoc[]
+include::{snippets}/get-remain-seats/path-parameters.adoc[]
 
 ==== HTTP Response Body
 
-include::{snippets}/reserve/http-response.adoc[]
+include::{snippets}/get-remain-seats/http-response.adoc[]
