--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -1,7 +1,8 @@
 ifndef::snippets[]
 :snippets: ../../build/generated-snippets
 endif::[]
-= My-backend REST API 명세서 ⚓️
+
+= API 명세서
 :doctype: book
 :icons: font
 :source-highlighter: highlightjs
