--- a/src/docs/asciidoc/api/user/user.adoc
+++ b/src/docs/asciidoc/api/user/user.adoc
@@ -5,10 +5,14 @@
 
 include::{snippets}/get-user-token/http-request.adoc[]
 
-==== HTTP Request Body
+==== Request Body
 
 include::{snippets}/get-user-token/request-body.adoc[]
 
-==== HTTP Response Body
+include::{snippets}/get-user-token/request-fields.adoc[]
+
+==== Response Body
 
 include::{snippets}/get-user-token/response-body.adoc[]
+
+include::{snippets}/get-user-token/response-fields.adoc[]
